inc = include_directories('.')
lib = static_library('reactphysics3d',
                     'body/Body.cpp',
                     'body/CollisionBody.cpp',
                     'body/RigidBody.cpp',
                     'collision/ContactManifoldInfo.cpp',
                     'collision/broadphase/BroadPhaseAlgorithm.cpp',
                     'collision/broadphase/DynamicAABBTree.cpp',
                     'collision/narrowphase/DefaultCollisionDispatch.cpp',
                     'collision/narrowphase/GJK/VoronoiSimplex.cpp',
                     'collision/narrowphase/GJK/GJKAlgorithm.cpp',
                     'collision/narrowphase/SAT/SATAlgorithm.cpp',
                     'collision/narrowphase/SphereVsSphereAlgorithm.cpp',
                     'collision/narrowphase/CapsuleVsCapsuleAlgorithm.cpp',
                     'collision/narrowphase/SphereVsCapsuleAlgorithm.cpp',
                     'collision/narrowphase/SphereVsConvexPolyhedronAlgorithm.cpp',
                     'collision/narrowphase/CapsuleVsConvexPolyhedronAlgorithm.cpp',
                     'collision/narrowphase/ConvexPolyhedronVsConvexPolyhedronAlgorithm.cpp',
                     'collision/shapes/AABB.cpp',
                     'collision/shapes/ConvexShape.cpp',
                     'collision/shapes/ConvexPolyhedronShape.cpp',
                     'collision/shapes/ConcaveShape.cpp',
                     'collision/shapes/BoxShape.cpp',
                     'collision/shapes/CapsuleShape.cpp',
                     'collision/shapes/CollisionShape.cpp',
                     'collision/shapes/ConvexMeshShape.cpp',
                     'collision/shapes/SphereShape.cpp',
                     'collision/shapes/TriangleShape.cpp',
                     'collision/shapes/ConcaveMeshShape.cpp',
                     'collision/shapes/HeightFieldShape.cpp',
                     'collision/RaycastInfo.cpp',
                     'collision/ProxyShape.cpp',
                     'collision/TriangleVertexArray.cpp',
                     'collision/PolygonVertexArray.cpp',
                     'collision/TriangleMesh.cpp',
                     'collision/PolyhedronMesh.cpp',
                     'collision/HalfEdgeStructure.cpp',
                     'collision/CollisionDetection.cpp',
                     'collision/NarrowPhaseInfo.cpp',
                     'collision/ContactManifold.cpp',
                     'collision/ContactManifoldSet.cpp',
                     'collision/MiddlePhaseTriangleCallback.cpp',
                     'constraint/BallAndSocketJoint.cpp',
                     'constraint/ContactPoint.cpp',
                     'constraint/FixedJoint.cpp',
                     'constraint/HingeJoint.cpp',
                     'constraint/Joint.cpp',
                     'constraint/SliderJoint.cpp',
                     'engine/CollisionWorld.cpp',
                     'engine/ConstraintSolver.cpp',
                     'engine/ContactSolver.cpp',
                     'engine/DynamicsWorld.cpp',
                     'engine/Island.cpp',
                     'engine/Material.cpp',
                     'engine/OverlappingPair.cpp',
                     'engine/Timer.cpp',
                     'collision/CollisionCallback.cpp',
                     'mathematics/mathematics_functions.cpp',
                     'mathematics/Matrix2x2.cpp',
                     'mathematics/Matrix3x3.cpp',
                     'mathematics/Quaternion.cpp',
                     'mathematics/Transform.cpp',
                     'mathematics/Vector2.cpp',
                     'mathematics/Vector3.cpp',
                     'memory/PoolAllocator.cpp',
                     'memory/SingleFrameAllocator.cpp',
                     'memory/MemoryManager.cpp',
                     'utils/Profiler.cpp',
                     'utils/Logger.cpp',
                     install : true)
